--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -16,6 +16,11 @@
 	
 *******************************************************************************/
 
+2020-12-21 Ver.0.3.0
+--------------------------------------------------------------------------------
+- NOVEDAD - Clase [AmebiSound]
+  Añadido el control del Buzzer. Se actualizan los ejemplos.
+
 
 2020-12-20 Ver.0.2.0
 --------------------------------------------------------------------------------
